<?xml version="1.0"?>
<package format="3">
  <name>toy_robot_simulator</name>
  <version>0.1.0</version>
  <description>Toy Robot Simulator - ROS2 Python</description>
  <maintainer email="vignesh.raja199@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
